--- a/scripts/selection-app-script/Sidebar.html
+++ b/scripts/selection-app-script/Sidebar.html
@@ -6,7 +6,7 @@
       font-size: 1px;
       margin: 8px;
       padding: 0;
-      width: 1px;         /* 🔽 Smaller width */
+      width: 1px;         
       overflow-wrap: break-word;
       color: transparent;
     }
